--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="icons/64x64.png" />
+  
   <script>
     function select_endpoint()
     {
