--- a/telosbroadcast.html
+++ b/telosbroadcast.html
@@ -68,7 +68,7 @@
   <a href="https://github.com/Thanatosa/eosh">
     <img src="icons/64x64.png">
   </a>
-  <h1>TLEOS mainnet transaction broadcast</h1>
+  <h1>TELOS mainnet transaction broadcast</h1>
   <form action="javascript:select_endpoint()">
     API endpoint 
     <select id="api_endpoint" required>
